<resources>
    <string name="app_name">OddJobs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="submit_a_job">Submit A Job</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="upload_photo">Upload A Photo</string>
    <string name="add_a_location">Add A Location</string>
</resources>
