<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

    <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:text="@string/submit_a_job"
            android:textSize="30sp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


        <EditText
                android:id="@+id/create_title"
                android:layout_height="wrap_content"
                android:layout_width="0px"
                android:layout_weight="2"
                android:hint="@string/title"
        />

        <EditText
                android:id="@+id/create_price"
                android:layout_height="wrap_content"
                android:layout_width="0px"
                android:layout_weight="1"
                android:hint="@string/price"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/item_description"
                android:layout_height="200dp"
                android:layout_width="match_parent"
                android:gravity="top"
                android:hint="@string/description"
        />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <ImageView
        android:id="@+id/job_image_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:layout_gravity="center"
        android:visibility="invisible"/>
    <ImageView
        android:id="@+id/job_imagetwo_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:layout_gravity="center"
        android:visibility="invisible"/>
    </LinearLayout>
    <Button
            android:id="@+id/upload_photo1_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="Upload Photo 1"
            android:textSize="24sp"/>
    <Button
        android:id="@+id/upload_photo2_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="Upload Photo 2"
        android:textSize="24sp"/>
    <Button
            android:id="@+id/add_a_location_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/add_a_location"
            android:textSize="24sp"/>
    <TextView
        android:id="@+id/location_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""/>
    <Button
            android:id="@+id/submit_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="Submit"
            android:textSize="24sp"/>
</LinearLayout>
</ScrollView>